# eds-mcp

./: .gitignore  GEMINI.md  README.md  pyproject.toml
src/eds_mcp/: calendar.py  contacts.py  env.py  mail.py  server.py
