[project]
name = "eds-mcp"
version = "0.1.0"
description = "MCP server for GNOME Evolution Data Server (EDS)"
license = "GPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "fastmcp",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
eds-mcp = "eds_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eds_mcp"]
